# remote-backup

./: .gitignore  CMakeLists.txt  FileInfo.h  clientCredentials.txt  config.json  main.cpp  serverCredentials.txt  serverSocket.cpp  serverSocket.h  socket.cpp  socket.h  start_client.cpp  start_server.cpp
communication/: Client.cpp  Client.h  ClientConnection.cpp  ClientConnection.h  Pipe.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  ServerSocket.h  Socket.h
converters/: Deserializer.h  Parser.h  Serializer.h
exceptions/: FileException.h
models/: Command.h  FileChunk.cpp  FileChunk.h  FileConfig.cpp  FileConfig.h  FileInfo.h  FileWatcher.cpp  FileWatcher.h  FileWriter.cpp  FileWriter.h  Header.cpp  Header.h  Request.cpp  Request.h  Response.cpp  Response.h  Serializable.cpp  Serializable.h  StringWrapper.h
utils/: Constants.h  FileWatcher.cpp  FileWatcher.h  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h  Utils.h
